third_party/move/move-compiler-v2/tests/recursive-instantiation-checker/v1-tests/nested_types_1.exp

Diagnostics:
error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/nested_types_1.move:4:9
  │
4 │     fun foo<T>() {
  │         ^^^
  │
  = `foo<T>` calls `foo<M::S<M::S<T>>>` at tests/recursive-instantiation-checker/v1-tests/nested_types_1.move:4,
    A cycle of recursive calls causes the instantiation to recurse infinitely.
